--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -270,7 +270,7 @@
     모순을 유도하기 위해 $X$가 이산확률벡터인 동시에 연속확률벡터라고 하자. 그렇다면 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가지는데, $\mu_n(A)=0$에서 $\prob_X(A)=0$의 모순이 발생한다. 이번에는 $X$가 이산확률벡터인 동시에 특이확률벡터라 하자. 그렇다면 이건과 같이 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가지는데, 이의 가산개의 원소를 $x_1,\,x_2,\,\cdots$와 같이 나열하면 $\prob_X(A)=\sum_{i=1}^k\prob_X\{x_i\}=0$에서 모순이 발생한다. (여기서 $k$는 유한할 수도 있고, $\infty$일 수도 있다.) 마지막으로 $X$가 연속확률벡터인 동시에 특이확률벡터라 하면 $\prob_X\ll\mu_n$이고 $\prob_X\perp\mu_n$이므로 $\prob_X=0$의 모순이 발생하고, 증명은 이로써 충분하다.
 \end{proof}
 
-일반적으로, 어떤 \texttt{rv.}가 이산인지, 연속인지, \texttt{singular}인지는 확률측도 $\mathbb{P}$와 \texttt{rv.} $X$ 모두에 의해 결정되는 것이지, 이 중 어느 하나에 의해 일방적으로 결정되는 것이 아니다. 즉, 둘 중 어느 하나만 보고서 $X$가 이산인지, 연속인지, \texttt{singular}인지는 알 수 없다. 이로 말미암아 우리가 \texttt{rv.}에 대해 당연하게 생각하던 사실들에 미묘한 혼동이 생겨나게 된다.
+일반적으로, 어떤 \texttt{rv.}가 이산인지, 연속인지, \texttt{singular}인지는 확률측도 $\mathbb{P}$와 \texttt{rv.} $X$ 모두에 의해 결정되는 것이지, 이 중 어느 하나에 의해 일방적으로 결정되는 것이 아니다. 즉, 둘 중 어느 하나만 보고서 $X$가 이산인지, 연속인지, \texttt{singular}인지는 알 수 없다. 이로 말미암아 우리가 \texttt{rv.}에 대해 당연하게 생각하던 사실들에 미묘한 혼란이 생겨나게 된다.
 
 우선 $X$가 이산확률벡터이지만 그 치역은 가산이 아닐 수 있다. 물론, 대부분의 응용에서는 이산확률변수의 치역도 가산으로 주어지지만, 이는 우연의 일치 그 이상도 이하도 아니다. 극단적인 예시로 가측공간 $(\mathbb{R},\,\mathcal{B}_1)$ 위의 측도 $\mathbb{P}$를
 \begin{equation*}
@@ -382,19 +382,21 @@
     임의의 $x_0\in\mathbb{R}^n$를 택하여 함수 $f:\mathbb{R}\to[0,\,1]$를 $f:h\mapsto F_X(x_0+h\ind)$로 두자. 그렇다면 $f$는 증가함수가 되어 위의 보조정리로부터 가산개의 불연속점만을 가지고, 곧 $0$으로 수렴하면서 각 점에서 $f$가 연속인 실수열 $\{h_i\}$를 적당히 택할 수 있다. 이는 각 $i\in\mathbb{N}$에 대해 $\prob_X(\prod_{i=1}^n(-\infty,\,x_0^i+h_i))=F_X((x_0+h_i\ind)-)=f(h_i-)=f(h_i)=F_X(x_0+h_i\ind)$임을 함의하므로 정리 \ref{thm:CDFContinuous}로부터 $F_X$는 $x_0+h_i\ind$에서 연속이고, $x_0+h_i\ind\to x_0$임은 자명하므로 $F_X$의 연속점의 집합이 조밀함을 안다. 한편, $n=1$인 경우에는 $F_X$가 증가함수이므로 다시 위의 보조정리로부터 가산개의 불연속점만을 가짐이 자명하다.
 \end{proof}
 
+이제 \texttt{PDF}를 도입하는 것으로 이번 절을 마무리하자. 측도론으로 \texttt{PDF}를 도입하는데 핵심적인 역할을 하는 것은 다름아닌 \texttt{Radon-Nikod\'ym} 도함수의 개념이다.
+
 \begin{definition}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 적당한 $\mathcal{B}_n$ 위의 $\sigma$-유한 측도 $\mu$가 존재하여 $\prob_X\ll\mu$라 하자. 이때 \texttt{Radon-Nikod\'ym} 도함수 $d\prob_X/d\mu$를 $X$의 $\mu$에 대한 \textbf{(확률)밀도함수((\texttt{probability}) \texttt{density function})}라 하고 $f_X$로 쓴다. 특별히, $n\geq2$인 경우 $f_X$를 \texttt{rv.} $X_1,\,\cdots,\,X_n$의 \textbf{결합(확률)밀도함수(\texttt{joint} (\texttt{probability}) \texttt{density function})}라 하고 $f_{X_1,\,\cdots,\,X_n}$으로 쓰기도 한다.
 \end{definition}
 
-이렇게 \texttt{Radon-Nikod\'ym} 도함수로 \texttt{PDF}를 정의하면서 이번에도 우리가 \texttt{PDF}에 대해 당연하게 생각하던 사실들에 미묘한 균열이 생겨나게 된다. 우선, \texttt{Radon-Nikod\'ym} 도함수가 유일하기는 하지만 그 유일성이 `$\mu$-거의 어디서나 같은 함수를 하나로 볼 때' 성립하는 것이므로 엄밀히는 유일하지 않다. 즉, $\mu$-영집합에서 조금씩 다른 무한히 많은 함수들이 모두 하나의 \texttt{rv.}의 \texttt{PDF}가 될 수 있으므로 일반적으로 특정 점에서의 \texttt{PDF}의 값을 물어보는 것은 의미가 없다. 그러나 \texttt{Radon-Nikod\'ym} 도함수를 추상적인 도구로만 사용했던 측도론에서와 달리 확률론에서는 \texttt{PDF}를 구체적인 함수로 다루어야 할 필요가 있으므로 혼란을 피하기 위해 \texttt{PDF}가 될 수 있는 무한히 많은, $\mu$-거의 어디서나 같은 함수 중 특정한 하나를 \texttt{PDF}의 \textbf{\texttt{version}}이라 한다. 물론, 표기상의 편의를 이유로 논의의 대상이 \texttt{PDF}인지, \texttt{PDF}의 \texttt{version}인지를 명시적으로 밝히지 않는 경우가 대부분이지만, $L^p$ 공간에서 동치류로서의 $f$와 구체적인 함수 $f$를 논의의 맥락으로 큰 혼란 없이 구분하였듯이 이 둘 또한 구분에 큰 어려움은 없을 것이다.
+이렇게 \texttt{Radon-Nikod\'ym} 도함수로 \texttt{PDF}를 정의하면서 이번에도 우리가 \texttt{PDF}에 대해 당연하게 생각하던 사실들에 미묘한 혼란이 생겨나게 된다. 우선, \texttt{Radon-Nikod\'ym} 도함수가 유일하기는 하지만 그 유일성이 `$\mu$-거의 어디서나 같은 함수를 하나로 볼 때' 성립하는 것이므로 엄밀히는 유일하지 않다. 즉, $\mu$-영집합에서 조금씩 다른 무한히 많은 함수들이 모두 하나의 \texttt{rv.}의 \texttt{PDF}가 될 수 있으므로 일반적으로 특정 점에서의 \texttt{PDF}의 값을 물어보는 것은 의미가 없다. 그러나 \texttt{Radon-Nikod\'ym} 도함수를 추상적인 도구로만 사용했던 측도론에서와 달리 확률론에서는 \texttt{PDF}를 구체적인 함수로 다루어야 할 필요가 있으므로 혼란을 피하기 위해 \texttt{PDF}가 될 수 있는 무한히 많은, $\mu$-거의 어디서나 같은 함수 중 특정한 하나를 \texttt{PDF}의 \textbf{\texttt{version}}이라 한다. 물론, 표기상의 편의를 이유로 논의의 대상이 \texttt{PDF}인지, \texttt{PDF}의 \texttt{version}인지를 명시적으로 밝히지 않는 경우가 대부분이지만, $L^p$ 공간에서 동치류로서의 $f$와 구체적인 함수 $f$를 논의의 맥락으로 큰 혼란 없이 구분하였듯이 이 둘 또한 구분에 큰 어려움은 없을 것이다.
 
-다음으로, 지금까지는 연속확률벡터와 이산확률벡터에 대해서만 \texttt{PDF}를 생각했지만 위의 정의에서 볼 수 있듯이 임의의 \texttt{rv.}에 대해서도 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$만 잘 잡아주면 얼마든지 $X$의 \texttt{PDF}를 생각할 수 있다. 한편, 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 \texttt{rv.}만 생각해도 충분하다는 사실에 놀라워했던 것이 불과 몇 페이지 전인데 굳이 또 이렇게 지나칠 정도록 일반적으로 \texttt{PDF}를 도입하는 것에 의문이 들 수도 있다. 그러나 이는 \texttt{mixed-type rv.}의 \texttt{PDF}를 직접 다루기 위함이 아니라 연속확률벡터와 이산확률벡터의 \texttt{PDF}를 동시에 다루기 위함이다. 고등학교나 교양 통계학에서 연속확률벡터와 이산확률벡터의 기댓값이나 분산 같은 성질들을 논할 때, 각각 경우를 나누어 전자는 적분으로, 후자는 합으로 접근했던 것을 기억할 것이다. 우리는 이런 일반적인 \texttt{PDF}와 측도론의 에필로그에서 소개한 셈측도를 이용해 드디어 이런 번거로움에서 벗어날 수 있다.
+다음으로, 지금까지는 연속확률벡터와 이산확률벡터에 대해서만 \texttt{PDF}를 생각했지만 위의 정의에서 볼 수 있듯이 임의의 \texttt{rv.}에 대해서도 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$만 잘 잡아주면 얼마든지 $X$의 \texttt{PDF}를 생각할 수 있다. 한편, 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 \texttt{rv.}만 생각해도 충분하다는 사실에 놀라워했던 것이 불과 몇 페이지 전인데 굳이 이렇게 지나칠 정도로 일반적으로 \texttt{PDF}를 도입하는 것이 의아하게 느껴질 수 있다. 그러나 이는 \texttt{mixed-type rv.}의 \texttt{PDF}를 직접 다루기 위함이 아니라 연속확률벡터와 이산확률벡터의 \texttt{PDF}를 동시에 다루기 위함이다. 고등학교나 교양 통계학에서 연속확률벡터와 이산확률벡터의 기댓값이나 분산 같은 성질들을 논할 때, 각각 경우를 나누어 전자는 적분으로, 후자는 합으로 접근했던 것을 기억할 것이다. 우리는 위에서 일반적으로 정의된 \texttt{PDF}와 측도론의 에필로그에서 소개한 셈측도를 이용해 드디어 이런 번거로움에서 벗어날 수 있다.
 
-정의에서 볼 수 있듯이 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$를 무엇으로 택하는지에 따라 그 \texttt{PDF}가 달라지므로 $\mu$를 반드시 명시해 주어야 하는데, 우리가 주로 다룰 연속확률벡터와 이산확률벡터의 경우 이에 대한 관례가 있다. 먼저 연속확률벡터 $X:\Omega\to\mathbb{R}^n$의 경우 그 정의상 $\prob_X\ll\mu_n$이 항상 성립하므로 특별한 언급이 없는 이상 연속확률벡터의 \texttt{PDF}는 $\mu_n$에 대한 \texttt{PDF}로 생각한다. 이산확률벡터 $X:\Omega\to\mathbb{R}^n$의 경우는 조금 복잡한데, 우선 정의상 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가진다. 물론, 이때의 가산 지지집합은 유일하지 않지만 임의의 $x\in A$에 대해 $\prob_X\{x\}>0$이라는 조건을 추가하면 유일성하게 주어진다. 한편, $\prob_X\ll\#_A$임이 자명하고, 이때 셈측도의 제한 $\#_A$가 $\sigma$-유한임도 자명하므로 특별한 언급이 없는 이상 이산확률벡터의 \texttt{PDF}는 $\#_A$에 대한 \texttt{PDF}로 생각한다. 나아가, 이산확률벡터의 경우 \texttt{PDF}의 \texttt{version}으로 특별한 언급이 없는 이상 $\mathbb{R}^n\setminus A$에서 $0$인 \texttt{version}을 택하는 관례도 있다. 이런 관례를 따르면 이때의 \texttt{PDF}가 바로 우리가 기존에 알던 \texttt{PMF}라는 사실을 잠시 후에 알게 될 것이다.
+한편, 정의에서 볼 수 있듯이 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$를 무엇으로 택하는지에 따라 그 \texttt{PDF}가 달라지므로 $\mu$를 반드시 명시해 주어야 하는데, 우리가 주로 다룰 연속확률벡터와 이산확률벡터의 경우 이에 대한 관례가 있다. 먼저 연속확률벡터 $X:\Omega\to\mathbb{R}^n$의 경우 그 정의상 $\prob_X\ll\mu_n$이 항상 성립하므로 특별한 언급이 없는 이상 연속확률벡터의 \texttt{PDF}는 $\mu_n$에 대한 \texttt{PDF}로 생각한다. 이산확률벡터 $X:\Omega\to\mathbb{R}^n$의 경우는 조금 복잡한데, 우선 정의상 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가진다. 물론, 이때의 가산 지지집합은 유일하지 않지만 임의의 $x\in A$에 대해 $\prob_X\{x\}>0$이라는 조건을 추가하면 유일하게 주어진다. 그렇다면 $(\prob_X,\,\mathcal{B}_n,\,\#)$에 대해 $\prob_X\ll\#_A$임이 자명하고, 이때 $\#_A$가 $\sigma$-유한임도 자명하므로 특별한 언급이 없는 이상 이산확률벡터의 \texttt{PDF}는 $\#_A$에 대한 \texttt{PDF}로 생각한다. 나아가, 이산확률벡터의 경우 \texttt{PDF}의 \texttt{version}으로 특별한 언급이 없는 이상 $\mathbb{R}^n\setminus A$에서 $0$인 \texttt{version}을 택하는 관례도 있다. 이런 관례를 따르면 이때의 \texttt{PDF}가 우리가 기존에 알던 \texttt{PMF}가 된다는 것을 잠시 후에 알게 될 것이다.
 
-이제 \texttt{PDF}의 기본적인 성질들을 보자.
+이제 \texttt{PDF}의 기본적인 성질들을 보자. 이는 대부분 적분의 성질들로부터 거의 자명하게 얻어진다.
 
-\begin{theorem}
+\begin{theorem}\label{thm:PDFProp}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 적당한 $\mathcal{B}_n$ 위의 $\sigma$-유한 측도 $\mu$가 존재하여 $\prob_X\ll\mu$라 하자. 그렇다면 $\mu$에 대한 $X$의 \texttt{PDF} $f_X$에 대해 다음이 성립한다.
     \begin{enumerate}
         \item $f_X\geq0$ ($\mu$-\texttt{ae.}).
@@ -432,19 +434,51 @@
     iii. 위의 정리와 셈측도의 성질 그리고 $f_X$의 \texttt{version}을 택하는 관례와 정리 \ref{thm:intRistriction}의 iii으로부터 $\prob_X(B)=\prob_X(A\cap B)=\int_{A\cap B}f_X\,d\#_A=\int_{A\cap B}f_X\vert_A\,d\#\vert_\mathcal{A}=\sum_{x\in A\cap B}f_X(x)=\sum_{x\in B}f_X(x)$이다.
 \end{proof}
 
+다음 정리는 연속확률벡터의 \texttt{CDF}와 \texttt{PDF}의 관계에 대한 정리로서 연속확률벡터의 \texttt{CDF}와 \texttt{PDF}를 계산하는 데 유용하게 사용된다.
+
+\begin{theorem}\label{thm:CDFPDFRel}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 연속확률벡터 $X:\Omega\to\mathbb{R}^n$에 대해 다음이 성립한다.
+    \begin{enumerate}
+        \item $f_X(x)=F_X^{(s)}(x)$.
+        \item $F_X(x)=\int_{\prod_{i=1}^n(-\infty,\,x_i]}f_X\,d\mu_n$.
+    \end{enumerate}
+    특별히, $x_0\in\mathbb{R}^n$의 근방에서 $\partial^nF_X/\partial x_1\cdots\partial x_n$이 존재하고 이가 $x_0$에서 연속이면 $f_X(x_0)=(\partial^nF_X/\partial x_1\cdots\partial x_n)(x_0)$이다. 이때, 편미분의 순서는 중요하지 않다.
+\end{theorem}
+
+\begin{proof}
+    이는 따름정리 \ref{cor:FTC1}와 정리 \ref{thm:PDFProp}의 iii으로부터 자명하다
+\end{proof}
+
+비슷하게, 다음 정리는 어떤 \texttt{rv.}가 연속확률벡터인지를 판단할 때 유용하다.
+
+\begin{theorem}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 \texttt{TFAE}.
+    \begin{enumerate}
+        \item \texttt{Rv.} $X$는 연속확률벡터이다.
+        \item \texttt{CDF} $F_X$가 절대연속이다.
+        \item 적분가능한 \texttt{Borel} 함수 $f:\mathbb{R}^n\to\overline{\mathbb{R}}$가 존재하여 $F_X(x)=\int_{\prod_{i=1}^n(-\infty,\,x_i]}f\,d\mu_n$이다.
+    \end{enumerate}
+\end{theorem}
+
+\begin{proof}
+    i $\Leftrightarrow$ ii. 이는 정리 \ref{thm:AbsContiRel}로부터 자명하다.
+
+    i $\Rightarrow$ iii. 이는 $f=f_X$로 두고 정리 \ref{thm:CDFPDFRel}의 ii를 생각하면 자명하다.
+
+    iii $\Rightarrow$ ii. 함수 $f$가 적분가능하므로 거의 어디서나 유한하고, 따라서 \texttt{WLOG}, 필요다하면 영집합에서의 $f$의 값을 $0$으로 바꾸어 $|f|<\infty$라 하자. 이제 집합열 $\{A_j\}$를 $A_j=|f|^{-1}((j,\,\infty))$로 두면 이는 $\emptyset$으로 수렴하는 감소하는 집합열이 되어 $\int_{A_j}|f|\,d\lambda_n\to\int_\emptyset|f|\,d\lambda_n=0$이다. 이로부터 임의의 $\epsilon>0$을 택하면 적당한 $j_0\in\mathbb{N}$가 존재하여 $\int_{A_{j_0}}|f|\,d\lambda_n<\epsilon/2$이고, $\mu_n(A)<\epsilon/2j_0=:\delta$인 임의의 $A\in\mathcal{B}_n$에 대해 $\int_A|f|\,d\mu_n\leq\int_{A\setminus A_{j_0}}|f|\,d\mu_n+\int_{A_{j_0}}|f|\,d\mu_n<\mu_n(A\setminus A_{j_0})j_0+\epsilon/2<\epsilon$이다. 따라서 임의의 유계이고 서로소인 $B_1,\,\cdots,\,B_l\in\mathcal{S}_n$에 대해 $\sum_{k=1}^l\mu_n(B_k)<\delta$이면 $\sum_{k=1}^l\Delta_{B_k}F_X=\sum_{k=1}^l\int_{B_k}f\,d\mu_n=\int_{\bigsqcup_{k=1}^lB_k}f\,d\mu<\epsilon$이 되어 $F_X$가 절대연속임을 안다.
+\end{proof}
+
 \section{Expectation}
 
-이번 절에서는 \texttt{rv.}의 대표적인 통계량 중 하나인 기댓값과 분산을 엄밀하게 도입하고, 이와 관련된 부등식을 증명하는 것을 목표로 한다. 통계학의 큰 연구주제 중 하나는 어떤 모집단의 정보를 단순화하여 전달하는 것이라 할 것이다. 물론, 이때 단순화의 정도와 이에 따른 정보의 손실은 서로 \texttt{trade-off}의 관계에 있어서 단순화를 많이 하면 할수록 용이한 정보의 전달이 가능하지만 그만큼 손실되는 정보도 많아지고, 역으로 손실되는 정보의 양을 줄이면 줄일수록 단순화의 정도가 떨어진다. 이런 상황에서 우리는 정보의 손실을 최소한으로 유지하면서도 정보를 단순하게 전달할 수 있는 좋은 방법을 찾고자 하는데, 이번 절에서 알아볼 기댓값은 어떤 분포의 정보를 간단화하여 전달할 수 있는 좋은 방법 중 하나이다. 어떤 \texttt{rv.} $X$의 분포 전체의 정보를 전달하려면 $X$가 정의된 확률공간과 $X$를 모두 전달해주어야 하는데, 이를 기댓값이라는 하나의 숫자로 대신하여 전달하니 엄청난 정도의 단순화를 이루면서도 이 하나의 숫자만으로 $X$의 값으로 기대할 수 있는 값, 즉 $X$가 가지는 가장 그럴싸한 값에 대한 정보를 유추할 수 있고, 나아가 특정 상황에서는 $X$의 분포에 대한 정보도 유추할 수 있는 등 정보의 손실도 크지 않다.
+이번 절에서는 \texttt{rv.}의 대표적인 통계량 중 하나인 기댓값과 분산을 엄밀하게 도입하고, 이와 관련된 부등식을 증명하는 것을 목표로 한다. 통계학의 큰 연구주제 중 하나는 `정보의 단순화'라 할 것이다. 당연히, 이때 단순화의 정도와 이에 따른 정보의 손실은 서로 \texttt{trade-off}의 관계에 있어서 단순화를 많이 하면 할수록 정보의 전달이 용이하지만 그만큼 손실되는 정보도 많아지고, 역으로 손실되는 정보의 양을 줄이면 줄일수록 단순화의 정도가 감소하여 전달이 어려워진다. 이런 상황에서 우리는 정보의 손실을 최소한으로 유지하면서도 정보를 단순하게 전달할 수 있는 좋은 방법을 찾고자 하는데, 이번 절에서 알아볼 기댓값은 어떤 분포의 정보를 단 하나의 통계량으로 단순화하여 전달할 수 있는 좋은 방법 중 하나이다. (이와 같이 분포의 정보를 요약하는 통계량을 그 분포의 대푯값이라 하며 기댓값 외에도 중앙값, 최빈값 등이 있다. 각 대푯값은 나름의 장단점이 있기에 어떤 상황에서 무엇을 써야 하는지를 잘 판단하여 사용해야 한다.) 
 
-물론, 때로는 기댓값만을 전달하는 상황에서 발생하는 정보의 손실이 받아들일 수 없는 수준일 수도 있다. 이러한 경우에는 추가적인 정보를 전달하여 정보의 손실을 줄이면 되는데, 이대 전달할 수 있는 추가적인 정보 중 하나가 바로 분산이다. 분산은 말 그대로 분포가 퍼져 있는 정도로, \texttt{rv.}가 기댓값에서 벗어나는 값을 가지는 정도에 대한 정보를 추가로 전달해준다.
-
-기본적으로 기댓값은 적분으로 정의되는데, 이로 말미암아 통계학에서는 미분보다 적분을 더 많이 사용하게 된다. 바로 정의를 보자.
+기댓값은 확률변수가 가질 것으로 가장 기대할 수 있는 값이라 해석할 수 있다. 기댓값은 분포의 여러 대푯값 중에서 가장 널리 이용되는 통계량으로 추정이나 관련 가설의 검정 등에 있어 많은 장점을 지니지만, \texttt{outlier}와 같은 극단치에 민감하여 때로는 분포에 대해 다소 오인의 가능성이 있는 정보를 전달할 수도 있다는 단점을 가진다. 이러한 기댓값은 기본적으로 확률변수의 적분으로 정의된다.
 
 \begin{definition}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 만약 $X$가 적분가능하다면 $\int_\Omega X\,d\mathbb{P}$를 $X$의 \textbf{기댓값(\texttt{expectation})} 혹은 \textbf{평균(\texttt{mean})}이라 하고 $\expect(X),\,\mu_X$ 혹은 간단히 $\mu$로 쓴다.
 \end{definition}
 
-기댓값이 정의되기 위해서는 확률공간과 그 위에서 정의된 \texttt{rv.}만 있으면 충분하다는 점에 주목하기 바란다. 고등학교나 교양 통계학에서는 기댓값이 정의되기 위해서는 \texttt{rv.}가 반드시 연속이거나 이산이어서 \texttt{PDF}나 \texttt{PMF}가 있어야 했다. 그러나 위의 정의는 일반적인 \texttt{mixed-type rv.}에 대해서도 기댓값을 정의할 수 있도록 해준다.  한편, 정의에서 볼 수 있듯이 기댓값은 확률측도에 대한 적분의 또다른 이름에 불과하므로 이에 관한 기본적인 성질들은 대부분 적분의 성질들로부터 자명하게 유도된다.
+기댓값이 정의되기 위해서는 확률공간과 그 위에서 정의된 \texttt{rv.}만 있으면 충분하다는 점에 주목하기 바란다. 고등학교나 교양 통계학에서는 기댓값이 정의되기 위해서는 \texttt{rv.}가 반드시 연속이거나 이산이어서 \texttt{PDF}나 \texttt{PMF}가 있어야 했다. 그러나 위의 정의는 일반적인 \texttt{mixed-type rv.}에 대해서도 기댓값을 정의할 수 있도록 해준다.  한편, 정의에서 볼 수 있듯이 기댓값은 확률측도의 적분에 불과하므로 이에 관한 기본적인 성질들은 대부분 적분의 성질들로부터 자명하게 유도된다.
 
 \begin{proposition}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $\expect(X)$가 존재할 필요충분조건은 $\expect(|X|)$가 존재하는 것이다.
@@ -474,9 +508,35 @@
     v. 이는 iii과 iv로부터 자명하다.
 \end{proof}
 
-비록 기댓값을 아주 일반적으로 도입했지만 이 정의는 기댓값을 실질적으로 계산하는 데에는 큰 도움이 안된다. 이에 기댓값을 구체적으로 구할 수 있도록 해 주는 방법이 필요하다. 그리고 그 방법의 열쇠는 바로 \texttt{PDF}이다.
+기댓값의 선형성으로부터 $X-\mu_X$의 기댓값은 항상 $0$이다. 이렇게 원래의 \texttt{rv.}에서 그 기댓값을 빼는 것을 \textbf{\texttt{centering}}이라 하며, 기댓값이 서로다른 분포를 비교할 때에 자주 사용되는 방법이다. 한편, 다양한 수렴정리들도 동일하게 성립한다.
 
-\begin{theorem}
+\begin{theorem}[Monotone convergence theorem]
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 음이 아닌 \texttt{rv.} $X_i:\Omega\to\mathbb{R}^+_0$의 열 $\{X_i\}$와 음이 아닌 \texttt{rv.} $X:\Omega\to\mathbb{R}^+_0$에 대해 $X_i\uparrow X$ (\texttt{as.})이고 $\expect(X)$가 존재한다고 하면 모든 $i\in\mathbb{N}$에 대해 $\expect(X_i)$도 존재하고 $\expect(X_i)\uparrow\expect(X)$이다.
+\end{theorem}
+
+\begin{proof}
+    모든 $i\in\mathbb{N}$에 대해 $0\leq X_i\leq X$이므로 $\expect(X_i)$가 존재한다. 이제 정리는 측도론에서 배운 \texttt{MCT}에서 자명하다.
+\end{proof}
+
+\begin{theorem}[Lebesgue's dominated convergence theorem]
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X_i:\Omega\to\mathbb{R}$의 열 $\{X_i\}$와 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $X_i\to X$ (\texttt{as.})라 하자. 또한 어떤 \texttt{rv.} $Y:\Omega\to\mathbb{R}^+_0$가 존재하여 $\expect(Y)$가 존재하고 모든 $i\in\mathbb{N}$에 대해 $|X_i|\leq Y$이면 $\expect(X_i)$와 $\expect(X)$가 모두 존재하고 $\expect(X_i)\to\expect(X)$이다.
+\end{theorem}
+
+\begin{proof}
+    이는 측도론에서 배운 \texttt{DCT}에서 자명하다.
+\end{proof}
+
+\begin{corollary}[Bounded convergence theorem]
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X_i:\Omega\to\mathbb{R}$의 열 $\{X_i\}$와 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $X_i\to X$ (\texttt{as.})라 하자. 또한 $\{X_i\}$가 균등하게 유계라 하자. 즉, 어떤 $M>0$이 존재하여 모든 $i\in\mathbb{N}$에 대해 $|X_i|\leq M$이라 하자. 그렇다면 $\expect(X_i)$와 $\expect(X)$가 모두 존재하고 $\expect(X_i)\to\expect(X)$이다.
+\end{corollary}
+
+\begin{proof}
+    이는 측도론에서 배운 유계수렴정리로부터 자명하다.
+\end{proof}
+
+비록 기댓값의 정의는 충분히 일반적이지만, 이가 기댓값을 계산하는 구체적인 방법을 알려주지는 않는다. 결국 기댓값을 계산하기 위해서는 우리가 여태껏 해왔던 것처럼 \texttt{PDF}의 도움을 받아야 한다.
+
+\begin{theorem}\label{thm:expectDistribution}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$와 \texttt{Borel} 함수 $g:\mathbb{R}^n\to\mathbb{R}$에 대해 $\expect(g(X))$가 존재한다면(혹은 $g$가 $\prob_X$-적분가능하다면) $\expect(g(X))=\int_{\mathbb{R}^n}g\,d\prob_X$이고, 이때 $g$는 $\prob_X$-적분가능하다(혹은 $\expect(g(X))$가 존재한다).
 \end{theorem}
 
@@ -492,7 +552,7 @@
     기댓값 $\expect(g(X))$가 존재한다면 $\expect(g(X))=\int_{\mathbb{R}^n}g\,d\prob_X=\int_{\mathbb{R}^n}f_Xg\,d\mu<\infty$이므로 이는 자명하다. 한편, $f_Xg$가 $\mu$-적분가능한 경우에 대해서도 비슷하게 하면 된다.
 \end{proof}
 
-이산확률벡터의 경우 다음과 같이 적분이 합으로 표현된다.
+특별히, 이산확률벡터의 경우 위의 정리는 다음 따름정리와 같이 합의 형태로 표현된다.
 
 \begin{corollary}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 이산확률벡터 $X:\Omega\to\mathbb{R}^n$와 \texttt{Borel} 함수 $g:\mathbb{R}^n\to\mathbb{R}$에 대해 $\expect(g(X))$가 존재한다면 $\expect(g(X))=\sum_{x\in\mathbb{R}^n}f_X(x)g(x)$이다.
@@ -502,29 +562,9 @@
     가정으로부터 $\prob_X$의 가산 지지집합 $A\in\mathcal{B}_n$가 존재하여 \texttt{WLOG}, 필요하다면 몇몇 원소를 제거하여 임의의 $x\in A$에 대해 $\prob_X\{x\}>0$이라 해도 된다. 표기의 편의를 위해 $\mathcal{A}=\mathcal{B}_n\vert_A$라 하면 $\#_A\vert_\mathcal{A}=\#\vert_\mathcal{A}$는 가측공간 $(A,\,\mathcal{A})$ 위의 셈측도이므로 위의 정리와 $f_X$의 \texttt{version}을 택하는 관례 그리고 정리 \ref{thm:intRistriction}의 iii으로부터 $\expect(g(X))=\int_{\mathbb{R}^n}f_Xg\,d\#_A=\int_Af_Xg\,d\#_A=\int_A(f_Xg)\vert_A\,d\#\vert_\mathcal{A}=\sum_{x\in A}f_X(x)g(x)=\sum_{x\in\mathbb{R}^n}f_X(x)g(x)$이다.
 \end{proof}
 
-\begin{theorem}[Monotone convergence theorem]
-    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 음이 아닌 \texttt{rv.} $X_i:\Omega\to\mathbb{R}^+_0$의 열 $\{X_i\}$와 음이 아닌 \texttt{rv.} $X:\Omega\to\mathbb{R}^+_0$에 대해 $X_i\uparrow X$ (\texttt{as.})이고 $\expect(X)$가 존재한다고 하면 모든 $i\in\mathbb{N}$에 대해 $\expect(X_i)$도 존재하고 $\expect(X_i)\uparrow\expect(X)$이다.
-\end{theorem}
+다음으로 넘어가기 전에, 기댓값에 대해 한 가지 유념해야 할 점이 있다. 기댓값의 정의에는 이가 마치 어떤 확률변수의 특성인 것처럼 쓰여 있지만 사실 기댓값은 확률변수의 특성이 아닌, 분포의 특성이어서 서로 다른 확률공간에서 정의된 서로다른 확률변수라도 그 분포가 같다면 기댓값도 같다. 실제로 확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$와 확률공간 $(\Omega',\,\mathcal{F}',\,\mathbb{P}')$에서 정의된 \texttt{rv.} $Y:\Omega'\to\mathbb{R}^n$에 대해 만약 $\prob_X=\prob_Y$라면 정리 \ref{thm:expectDistribution}로부터 $\expect(X)=\int_{\mathbb{R}^n}x\,d\prob_X(x)=\expect(Y)$이다. 이러한 사실은 기댓값이 분포의 정보를 요약하여 전달하는 통계량이라는 점에서 어떻게 보면 당연한 것이다.
 
-\begin{proof}
-    모든 $i\in\mathbb{N}$에 대해 $0\leq X_i\leq X$이므로 $\expect(X_i)$가 존재한다. 그렇다면 정리는 측도론에서 배운 \texttt{MCT}에서 자명하다.
-\end{proof}
-
-\begin{theorem}[Fatou's lemma]
-    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 음이 아닌 \texttt{rv.} $X_i:\Omega\to\mathbb{R}^+_0$의 열 $\{X_i\}$에 대해 $\liminf_{i\to\infty}\expect(X_i)\geq\expect(\liminf_{i\to\infty}X_i)$이다.
-\end{theorem}
-
-\begin{theorem}[Lebesgue's dominated convergence theorem]
-    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X_i:\Omega\to\mathbb{R}$의 열 $\{X_i\}$와 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $X_i\to X$ (\texttt{as.})라 하자. 또한 어떤 \texttt{rv.} $Y:\Omega\to\mathbb{R}^+_0$가 존재하여 $\expect(Y)$가 존재하고 모든 $i\in\mathbb{N}$에 대해 $|X_i|\leq Y$이면 $\expect(X_i)$와 $\expect(X)$가 모두 존재하고 $\expect(X_i)\to\expect(X)$이다.
-\end{theorem}
-
-\begin{proof}
-    이는 측도론에서 배운 \texttt{DCT}에서 자명하다.
-\end{proof}
-
-\begin{corollary}[Bounded convergence theorem]
-    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X_i:\Omega\to\mathbb{R}$의 열 $\{X_i\}$와 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $X_i\to X$ (\texttt{as.})라 하자. 또한 $\{X_i\}$가 균등하게 유계라 하자. 즉, 어떤 $M>0$이 존재하여 모든 $i\in\mathbb{N}$에 대해 $|X_i|\leq M$이라 하자. 그렇다면 $\expect(X_i)$와 $\expect(X)$가 모두 존재하고 $\expect(X_i)\to\expect(X)$이다.
-\end{corollary}
+기댓값에 이어 살펴볼 통계량은 분산이다. 기댓값이 분포의 정보를 요약하여 전달하는 좋은 통계량인 것은 사실이지만, 이가 분포의 정보를 완벽하게 전달하지는 못한다. 이때 발생하는 정보의 손실이 크게 중요하지 않은 경우도 있지만, 때로는 기댓값만으로는 부족한 경우도 있다. 이에 기댓값만을 전달할 때 손실되는 정보를 보충할 목적으로 보조적인 통계량을 제공할 수 있는데, 보통 분포가 기댓값으로부터 퍼져있는 정도를 의미하는 분산이나 표준편차를 제공한다. (이와 같이 분포가 퍼져있는 정도를 의미하는 통계량을 그 분포의 산포도라 하며 분산과 표준편차 이외에도 평균절대편차(\texttt{MAD}; \texttt{Mean Absolute Deviation}), 사분위수범위(\texttt{IQR}; \texttt{InterQuartile Range}) 등이 있다.) 이러한 분산은 기본적으로 기댓값으로 정의된다.
 
 \begin{definition}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 만약 $\expect((X-\mu_X)^2)$이 존재한다면 이를 $X$의 \textbf{분산(\texttt{variance})}이라 하고 $\var(X),\,\sigma_X^2$ 혹은 간단히 $\sigma^2$으로 쓴다. 나아가, $\var(X)$가 존재한다면 $\sqrt{\var(X)}$를 $X$의 \textbf{표준편차(\texttt{standard deviation})}라 하고 $\sd(X),\,\sigma_X$ 혹은 간단히 $\sigma$로 쓴다.
@@ -537,6 +577,8 @@
 \begin{proof}
     만약 $\var(X)$가 존재한다면 정의로부터 $\expect(X)$와 $\expect((X-\mu_X)^2)$가 존재하고, 곧 $X^2=(X-\mu_X)^2+2\mu_XX-\mu_X^2$에서 $\expect(X^2)$이 존재함을 안다. 역으로 $\expect(X^2)$이 존재한다면 $|X|\leq X^2\ind_{\{|X|\geq1\}}+\ind_{\{|X|<1\}}\leq X^2+1$에서 $\expect(X)$가 존재함을 알고,곧 $(X-\mu_X)^2=X^2-2\mu_XX+\mu_X^2$에서 $\var(X)=\expect((X-\mu_X)^2)$이 존재한다.
 \end{proof}
+
+분산의 기본적인 성질들은 모두 기댓값의 성질들에 기인하다. 특히 다음 정리의 i는 간단한 공식이지만 분산을 실제로 계산할 때 유용하게 사용되는 공식이다.
 
 \begin{theorem}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $\var(X)$가 존재한다면 다음이 성립한다.
@@ -566,9 +608,19 @@
    에서 정리는 자명하다.
 \end{proof}
 
+이제 기댓값에 관한 다양한 부등식을 알아보는 것으로 이번 절을 마무리하자. 이러한 부등식은 이후 확률론의 다양한 정리를 증명할 때에 약방의 감초와 같이 사용될 것이다.
+
 \begin{theorem}[Jensen's inequality]
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X,\,Y:\Omega\to\mathbb{R}$와 함수 $g:\mathbb{R}\to\mathbb{R}$에 대해 적당한 구간 $I\subseteq\mathbb{R}$가 존재하여 $g$가 $I$에서 볼록하고(혹은 오목하고) $X\in I$ (\texttt{as.})라 하자. 만약 $\expect(X)$와 $\expect(g(X))$가 존재한다면 $g(\expect(X))\leq\expect(g(X))$이다(혹은 $g(\expect(X))\geq\expect(g(X))$이다).
 \end{theorem}
+
+\begin{proof}
+    먼저 $I$가 열린구간인 경우를 생각하여 $I=(a,\,b)$로 두면 가정과 따름정리 \ref{cor:zeroAeIntegral}의 iii으로부터 $\expect(X)\in I$이다. 한편, $g$가 $I$에서 볼록하므로 $(\expect(X),\,g(\expect(X)))$를 지나는 \texttt{supporting line} $l:y=mx+n$이 존재하여 $mX+n\leq g(X)$ (\texttt{as.})이고, 따라서 $g(\expect(X))=m\expect(X)+n=\expect(mX+n)\leq\expect(g(X))$이다.
+
+    이제 $I$가 닫힌구간인 경우를 생각하여 $I=[a,\,b]$로 두면 가정으로부터 $\expect(X)\in I$인데, 만약 $\expect(X)\in I^\circ$라면 이전과 같이 하여 $g(\expect(X))\leq\expect(g(X))$임을 보일 수 있으므로 $\expect(X)$가 $I$의 양 끝점인 경우만 고려하면 된다. 간결한 논의를 위해, $\expect(X)=b$라 하자. (반대로 $\expect(X)=a$인 경우에도 이와 비슷하게 하면 된다.) 그렇다면 정리 \ref{thm:zeroAeIntegral}의 ii로부터 $X=b$ (\texttt{as.})이므로 $g(X)=g(b)$ (\texttt{as.})에서 $g(\expect(X))=g(b)=\expect(g(X))$이고, 증명이 끝난다.
+
+    한편, 구간 $I$가 한쪽 끝점만 포함하는 경우에도 $I$가 닫힌구간인 경우와 비슷하게 하면 같은 결론을 얻고, $g$가 $I$에서 오목한 경우에는 $-g$를 생각하면 되므로 증명은 이로써 충분하다.
+\end{proof}
 
 \begin{theorem}[H\"older's inequality]
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X,\,Y:\Omega\to\mathbb{R}$와 $1/p+1/q=1$인 $p,\,q>1$에 대해 $\expect(|X|^p)$와 $\expect(|Y|^q)$가 존재한다면 $\expect(|XY|)$도 존재하고 $\expect(|XY|)\leq[\expect(|X|^p)]^{1/p}[\expect(|Y|^q)]^{1/q}$이다.
@@ -576,6 +628,14 @@
 
 \begin{proof}
     이는 측도론에서 배운 \texttt{H\"older}의 부등식으로부터 자명하다.
+\end{proof}
+
+\begin{theorem}[Minkowski's inequality]
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X,\,Y:\Omega\to\mathbb{R}$와 $p\geq1$에 대해 $\expect(|X|^p)$와 $\expect(|Y|^p)$가 존재한다면 $\expect(|X+Y|^p)$도 존재하고 $[\expect(|X+Y|^p)]^{1/p}\leq[\expect(|X|^p)]^{1/p}+[\expect(|Y|^p)]^{1/p}$이다.
+\end{theorem}
+
+\begin{proof}
+    이는 측도론에서 배운 \texttt{Minkowski}의 부등식으로부터 자명하다.
 \end{proof}
 
 \begin{corollary}[Cauchy-Schwarz's inequality]
@@ -594,6 +654,8 @@
     우선 $|X|^p\leq|X|^q\ind_{\{|X|\geq1\}}+\ind_{\{|X|<1\}}\leq|X|^q+1$에서 $\expect(|X|^p)$이 존재함을 안다. 이제 함수 $g:\mathbb{R}\to\mathbb{R}$를 $g:x\mapsto x^{q/p}\ind_{\mathbb{R}^+}(x)$로 두면 이는 볼록함수이므로 \texttt{Jensen}의 부등식으로부터 $[\expect(|X|^p)]^{q/p}=g(\expect(|X|^p))\leq\expect(g(|X|^p))=\expect(|X|^q)$이고, 곧 증명이 끝난다.
 \end{proof}
 
+아래의 두 부등식은 증명의 도구로 쓰일 뿐만 아니라 어떤 확률분포가 특정 값을 얼마 이상 벗어날 확률에 대한 상계로서의 가치를 지닌다. 이를 두고 아래의 두 부등식이 `\texttt{tail probability}를 \texttt{bounding}한다'고 한다.
+
 \begin{theorem}[Markov's inequality]
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$와 $p>0$에 대해 $\expect(|X|^p)$이 존재한다면 임의의 $x>0$에 대해 $\mathbb{P}\{|X|\geq x\}\leq\expect(|X|^p)/x^p$이다.
 \end{theorem}
@@ -608,6 +670,16 @@
 
 \begin{proof}
     이는 \texttt{rv.} $X-\mu_X$에 $p=2$인 경우의 \texttt{Markov}의 부등식을 적용한 결과이다.
+\end{proof}
+
+다음은 \texttt{Chebyshev}의 부등식의 기초적인 응용으로, 분산이 $0$이라는 것의 의미를 잘 나태나준다.
+
+\begin{proposition}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $\var(X)=0$이면 $\expect(X)$가 존재하고 $X=\expect(X)$ (\texttt{as.})이다.
+\end{proposition}
+
+\begin{proof}
+    우선 $\expect(X)$가 존재함은 자명하다. 이제 사건열 $\{E_i\}$를 $E_i=\{|X-\mu_X|>1/i\}$로 두면 이는 $\{X\ne\mu_X\}$로 수렴하는 사건열로 $\mathbb{P}\{X=\mu_X\}=1-\mathbb{P}\{X\ne\mu_X\}=1-\lim_{i\to\infty}\mathbb{P}(E_i)$이다. 한편, 각 $i\in\mathbb{N}$에 대해 \texttt{Chebyshev}의 부등식으로부터 $\mathbb{P}(E_i)\leq\var(X)/i^2=0$이므로 $\mathbb{P}(E_i)\to0$에서 $\mathbb{P}\{X=\mu_X\}=1$임을 안다.
 \end{proof}
 
 \section{Moments}
@@ -642,4 +714,5 @@
     \item 여기서 $\lim_{x_i\to-\infty}F_X(x)=0$은 임의의 $\cdots,\,x_{i-1},\,x_{i+1},\,\cdots\in\mathbb{R}$와 임의의 $\epsilon>0$에 대해 적당한 $M\in\mathbb{R}$이 존재하여 $x_i<M$인 임의의 $x_i\in\mathbb{R}$에 대해 $F_X(x)<\epsilon$이라는 의미이다.
     \item 여기서 $\lim_{x_1,\,\cdots,\,x_n\to\infty}F_X(x)=1$은 임의의 $\epsilon>0$에 대해 적당한 $M\in\mathbb{R}$이 존재하여 $x\geq M\ind$인 임의의 $x\in\mathbb{R}^n$에 대해 $|F_\mu(x)-1|<\epsilon$이라는 의미이다.
     \item 집합 $A\subseteq\mathbb{R}^m$에서 정의된 함수 $f:A\to\mathbb{R}^n$와 한 점 $x_0\in\mathrm{acc}\,A$에 대해 극한 $\lim_{x\uparrow x_0}f(x)$가 존재하는 경우 그 값을 $f(x_0-)$로 쓴다. 한편, 여기서 $\lim_{x\uparrow x_0}f(x)=f(x_0-)$는 임의의 $\epsilon>0$에 대해 적당한 $\delta>0$가 존재하여 $||x-x_0||<\delta$이고 $x<x_0$인 임의의 $x\in A$에 대해 $||f(x)-f(x_0-)||<\epsilon$이라는 의미이다. 이제 $f(x_0+)$도 비슷하게 정의된다.
+    \item 
 \end{enumerate}
